--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -6,12 +6,12 @@ TERM = "xterm-256color"
 
 [font]
 size = 12
-offset.y = 0
+offset.y = 3
 
 [font.bold]
 # family = "Krypton"
 # family = "JetBrainsMono Nerd Font"
-# family = "Neon"
+family = "Neon"
 # family = "Agave Nerd Font Mono"
 # family = "Mononoki Nerd Font Mono "
 # family: "Argon"
@@ -19,14 +19,14 @@ offset.y = 0
 # family: "Mononoki Nerd Font Mono "
 # family = "FiraCode Nerd Font Mono"
 # family: "MonaspaceNeon"
-# family= "CodeNewRoman Nerd Font"
+# family = "CodeNewRoman Nerd Font"
 # family = "Ubuntu Mono Nerd Font "
 style = "Bold"
 
 [font.bold_italic]
-# family = "Radon"
-family = "JetBrainsMono Nerd Font"
-# family= "CodeNewRoman Nerd Font"
+family = "Radon"
+# family = "JetBrainsMono Nerd Font"
+# family = "CodeNewRoman Nerd Font"
 # family = "Neon"
 # family = "Krypton"
 # family = "Agave Nerd Font Mono"
@@ -36,10 +36,9 @@ family = "JetBrainsMono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-# family = "Radon"
-family = "JetBrainsMono Nerd Font"
-# family= "CodeNewRoman Nerd Font"
-# family = "Neon"
+family = "Radon"
+# family = "JetBrainsMono Nerd Font"
+# family = "CodeNewRoman Nerd Font"
 # family = "Neon"
 # family = "Agave Nerd Font Mono"
 # family = "Mononoki Nerd Font Mono "
@@ -48,8 +47,8 @@ family = "JetBrainsMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-# family = "Neon"
-family = "JetBrainsMono Nerd Font"
+family = "Neon"
+# family = "JetBrainsMono Nerd Font"
 # family = "CodeNewRoman Nerd Font"
 # family = "Agave Nerd Font Mono"
 # family = "Mononoki Nerd Font Mono "
