--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -17,6 +17,7 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 
 set -g @yank_selection_mouse 'clipboard'.
 setw -g mode-keys vi
+set -s set-clipboard on
 bind -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
