--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -51,9 +51,9 @@ set -g status-right-length 100
 set -g status-left-length 0
 set -g status-left ""
 set -g status-right ""
-set -g status-right '#(bash -c "command -v muxbar >/dev/null 2>&1 && muxbar || echo muxbar not installed")'
+# set -g status-right '#(bash -c "command -v muxbar >/dev/null 2>&1 && muxbar || echo muxbar not installed")'
 # set -g status-right '#H'
-# set -g status-right '#[fg=cyan,bold] #U@#H #[default]#[fg=blue]#(tmux display-message -p "#{pane_current_path}" | sed "s#$HOME#~#g") #[fg=red]%H:%M %Y-%m-%d#[default]'
+set -g status-right '#[fg=cyan,bold] #U@#H #[default]#[fg=blue]#(tmux display-message -p "#{pane_current_path}" | sed "s#$HOME#~#g") #[fg=red]%Y-%m-%d  #[fg=green,bold]%H:%M #[default]'
 run '~/.tmux/plugins/tpm/tpm'
 
 
