--- a/dot_config/yazi/package.toml
+++ b/dot_config/yazi/package.toml
@@ -1,18 +1,37 @@
-# [plugin]
-# deps = [{ use = "Lil-Dank/lazygit", rev = "c82794f" }, { use = "yazi-rs/plugins:git", rev = "ad52adf" }, { use = "pirafrank/what-size", rev = "f08f7f2" }, { use = "Reledia/glow", rev = "388e847" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "79193b3"
+hash = "e0d2c8d7e7afe5b82270367098d1a821"
+
+[[plugin.deps]]
+use = "Lil-Dank/lazygit"
+rev = "9f924e3"
+hash = "2b0c33928986f126d5c5a4cac31a6b46"
+
+[[plugin.deps]]
+use = "pirafrank/what-size"
+rev = "b23e3a4"
+hash = "98e5f5af3efd3ba8bc2db0720187cc83"
+
+[[plugin.deps]]
+use = "dedukun/bookmarks"
+rev = "95b2c58"
+hash = "17a094653b7d0db4ac68ed531d2e1412"
+
+[[plugin.deps]]
+use = "Reledia/glow"
+rev = "c76bf4f"
+hash = "a6b78bf9af5390e3a85a6951fbb7b93"
+
+[[plugin.deps]]
+use = "ndtoan96/ouch"
+rev = "ce6fb75"
+hash = "ed6c185514109d7c5463f609282b220c"
+
+[[plugin.deps]]
+use = "kirasok/epub-preview"
+rev = "521feb1"
+hash = "9aed469134b5c89fc4014ce278307ae3"
 
 [flavor]
 deps = []
-
-# [plugin]
-# deps = [{ use = "yazi-rs/plugins:git", rev = "7afba3a" }, { use = "Lil-Dank/lazygit", rev = "c82794f" }, { use = "pirafrank/what-size", rev = "f08f7f2" }, { use = "Reledia/glow", rev = "c2ed51e" }, { use = "kirasok/epub-preview", rev = "df04c9d" }]
-
-[plugin]
-deps = [
-  { use = "yazi-rs/plugins:git", rev = "600614a" },
-  { use = "Lil-Dank/lazygit", rev = "c82794f" },
-  { use = "pirafrank/what-size", rev = "b23e3a4" }, { use = "dedukun/bookmarks", rev = "202e450" }, { use = "Reledia/glow", rev = "5ce76dc" },
-  # { use = "Reledia/glow", rev = "c2ed51e" },
-  # { use = "kirasok/epub-preview", rev = "df04c9d" },
-  # { use = "Dronakurl/epub-preview", rev = "df04c9d" },
-]
