--- a/dot_config/systemd/user/rclone@.service
+++ b/dot_config/systemd/user/rclone@.service
@@ -9,11 +9,16 @@ Type=simple
 TimeoutStopSec=60
 SuccessExitStatus=143
 
-ExecStartPre=/bin/sleep 60
 ExecStart=%h/.config/systemd/user/rclone.sh %i
 
 SyslogIdentifier=rclone@%i
-ExecStop=bash -c 'fusermount -u /mnt/rclone/%i && rmdir /mnt/rclone/%i && rm -fr /mnt/rclone/%i && rm -fr %HOME/rclone/%i'
+ExecStop=bash -c 'echo Unmounting %i ... && \
+  fusermount -u /mnt/rclone/%i && \
+  echo Removing /mnt/rclone/%i ... && \
+  rmdir /mnt/rclone/%i && \
+  echo Removing %h/rclone/%i ... && \
+  rm -fr %h/rclone/%i && \
+  echo Finished unmounting %i'
 Restart=on-failure
 RestartSec=150
 StartLimitBurst=3
