--- a/dot_config/systemd/user/rsync@.service
+++ b/dot_config/systemd/user/rsync@.service
@@ -7,16 +7,16 @@ OnFailure=notify@%i.service
 [Service]
 Type=simple
 TimeoutStopSec=60
-SuccessExitStatus=143
+; SuccessExitStatus=143
 
 ExecStartPre=/bin/sleep 60
 ExecStart=%h/.config/systemd/user/rsync.sh %i
 
-StandardOutput=file:%h/tmp/rsync.%i.log
-Restart=on-failure
-RestartSec=150
-StartLimitBurst=1
-StartLimitInterval=10min
+; StandardOutput=file:%h/tmp/rsync.%i.log
+; Restart=on-failure
+; RestartSec=150
+; StartLimitBurst=1
+; StartLimitInterval=10min
 
 [Install]
 WantedBy=default.target
