--- a/dot_config/systemd/user/dump@.service
+++ b/dot_config/systemd/user/dump@.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=rclone sync %i
+Description=Dump %i data to drive
 Wants=network-online.target
 After=network-online.target
 OnFailure=notify@%i.service
@@ -9,10 +9,8 @@ Type=simple
 TimeoutStopSec=60
 ; SuccessExitStatus=143
 
-ExecStartPre=/bin/sleep 60
-ExecStart=%h/.config/systemd/user/rsync.sh %i
-SyslogIdentifier=rsync@%i
-
+ExecStart=%h/.config/systemd/user/dump.sh %i
+SyslogIdentifier=dump@%i
 ; StandardOutput=file:%h/tmp/rsync.%i.log
 ; Restart=on-failure
 ; RestartSec=150
