scaling again and gdu

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -10,8 +10,8 @@ offset.y = 1
 
 [font.bold]
 # family = "Krypton"
-family = "JetBrainsMono Nerd Font"
-# family = "Neon"
+# family = "JetBrainsMono Nerd Font"
+family = "Neon"
 # family = "Agave Nerd Font Mono"
 # family = "Mononoki Nerd Font Mono "
 # family: "Argon"
@@ -27,7 +27,7 @@ style = "Bold"
 # family = "Radon"
 # family = "JetBrainsMono Nerd Font"
 # family = "CodeNewRoman Nerd Font"
-# family = "Neon"
+family = "Neon"
 # family = "Krypton"
 # family = "Agave Nerd Font Mono"
 # family = "FiraCode Nerd Font Mono"
@@ -39,7 +39,7 @@ style = "Bold Italic"
 # family = "Radon"
 # family = "JetBrainsMono Nerd Font"
 # family = "CodeNewRoman Nerd Font"
-# family = "Neon"
+family = "Neon"
 # family = "Agave Nerd Font Mono"
 # family = "Mononoki Nerd Font Mono "
 # family = "FiraCode Nerd Font Mono"
@@ -47,7 +47,7 @@ style = "Bold Italic"
 style = "Italic"
 
 [font.normal]
-# family = "Neon"
+family = "Neon"
 # family = "JetBrainsMono Nerd Font"
 # family = "CodeNewRoman Nerd Font"
 # family = "Agave Nerd Font Mono"
