--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -7,10 +7,24 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "features": {
+    "edit_prediction_provider": "copilot"
+  },
+  "project_panel": {
+    "hide_gitignore": false
+  },
+  "show_edit_predictions": true,
+  "languages": {
+    "YAML": {
+      "show_edit_predictions": true
+    },
+    "JSONC": {
+      "show_edit_predictions": false
+    }
+  },
   "language_models": {
     "mistral": {
       "api_url": "https://api.mistral.ai/v1",
-      "api_key": "YOUR_MISTRAL_API_KEY",
       "available_models": [
         {
           "name": "codestral-latest",
@@ -22,19 +36,43 @@
     }
   },
   "agent": {
+    "default_profile": "write",
     "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4.1"
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-latest"
       // "model": "devstral-medium-latest"
     }
   },
   "buffer_font_family": "JetBrainsMono Nerd Font Mono",
+  "buffer_font_weight": 200,
+  "soft_wrap": "editor_width",
+  // "buffer_font_family": "FiraCode Nerd Font Mono",
+  // "buffer_font_family": "Monaspace Neon",
+  // "buffer_font_family": "Iosevka Nerd Font Mono",
+  // "buffer_font_family": "Monaspace Neon",
+  // # family = "FiraCode Nerd Font Mono"
+  // # family = "Sauce Code Pro Nerd Font"
+  // # family = "Mono"
+  // # family = "Krypton"
+  // # family = "Neon"
+  // # family = "Agave Nerd Font Mono"
+  // # family = "Mononoki Nerd Font Mono "
+  // # family: "Argon"
+  // # family = "Krypton"
+  // # family: "Mononoki Nerd Font Mono "
+  // # family: "MonaspaceNeon"
+  // # family = "CodeNewRoman Nerd Font"
+  // # family = "Ubuntu Mono Nerd Font "
+  "buffer_line_height": { "custom": 1.39 },
   "vim_mode": true,
+  "helix_mode": false,
+  "autosave": "on_focus_change",
+  "relative_line_numbers": true,
   "ui_font_size": 16,
   "buffer_font_size": 16,
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "Ayu Mirage"
+    "dark": "Ayu Dark"
   }
 }
