--- a/dot_config/yazi/theme.toml
+++ b/dot_config/yazi/theme.toml
@@ -1,2 +1,6 @@
+# [flavor]
+# use = "catppuccin-mocha"
 [flavor]
-use = "catppuccin-mocha"
+use = "tokyo-night"
+# For Yazi 0.4 and above
+dark = "tokyo-night"
