--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -106,10 +106,12 @@ D = ["ensure_selections_forward", "extend_to_line_end", "delete_selection"]
 X = ["extend_line_above"]
 esc = ["collapse_selection", "keep_primary_selection"]
 C-space = ["expand_selection"]
+A-m = "flip_selections"
 
 [keys.normal.g]
 o = "add_newline_below"
 O = "add_newline_above"
+q = ":reflow"
 
 [keys.select]
 X = ["extend_line_above"]
