kitty copy command is no longer obstructed

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1367,9 +1367,9 @@ map kitty_mod+o next_window
 
 #: Tab management {{{
 
-map kitty_mod+n next_tab
-map kitty_mod+p  previous_tab
-map kitty_mod+c     new_tab
+# map kitty_mod+n next_tab
+# map kitty_mod+p  previous_tab
+# map kitty_mod+c     new_tab
 # map kitty_mod+q     close_tab
 # map shift+cmd+w     close_os_window
 # map kitty_mod+.     move_tab_forward
